- Bug fixed: Closing the window did not ask to save data before exit. (TNX EA7HEG).
- Bug fixed: Beam was not properly calculated. (TNX DL6FBS).
- Bug fixed: Minor problem of APP_KLOG_NUMBER ADIF header fixed.
- GUI updated: Remove the map tab in the main GUI as it is still not implemented.
- GUI updated: Ordered the tab-switching to make it more usable. (TNX Cedric).

November-2010 0.5.7
- New feature: Added the Export needed QSL that allows to create an ADIF file with all the QSO with new ones and new bands still not confirmed that has not been QSLed.
  The objective is to export it to a QSL or label printing software (until KLog implements that feature).
- Updated translations: SV by SM4ABE.
- GUI improved: Added sliders to be able to move panels.
- GUI improved: Changing the band combobox changes the TX Freq box and viceversa.
- Minor fix: The PROGRAMVERSION tag in log was not properly formated.

July-2010 0.5.6
- Fixed the hamlib compilation scripts (CMakeLists.txt, FindHamlib.cmake). (TNX AB4BD).
- Fixed one bug that causes some architectures not to compile.
- Fixed some permisions and other warnings for Fedora packaging. (TNX N3LRX).
- BUG fixed: Setting QSL from the log with right button was not working.

May-2010 0.5.5
- New feature: If cty.dat file is not found, KLog offers to download from the web. 
- New feature: New tool to update the update the cty.dat file from the web.
- New feature: QRZ font color changes to red if has been worked previously. (Proposed by KE7TDY)

March-2010 0.5.4
- Small fix to initialize a variable before using it.(realTimeLog in klog.cpp)
- Fixed a bug that caused KLog to crash of no cty.dat file was found (bug #016917)(TNX KA6MAL)

February-2010  0.5.3
- Fixed a bug that caused modified QSO not being updated.
- Fixed a bug in the way the band & mode combobox managed the data.

February-2010 - 0.5.2
- Fixed a bug that causes a crash when connectiong to DXCluster. (bug #016653)
- Added a very basic Satellite support.